--- a/skatehub/src/pages/navigate/navigate.html
+++ b/skatehub/src/pages/navigate/navigate.html
@@ -1,18 +1,10 @@
-<!--
-  Generated template for the NavigatePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>Map</ion-title>
   </ion-navbar>
 </ion-header>
 
-
-<ion-content padding>
-  <h3> My Google Maps Demo</h3>
+<!-- Don't need to say map twice -->
+<ion-content padding>  
   <div id="map"></div>
-
 </ion-content>
