--- a/skatehub/src/pages/profile/profile.html
+++ b/skatehub/src/pages/profile/profile.html
@@ -1,4 +1,3 @@
-
 <ion-content>
   <!-- <ion-row justify-content-center class="top-spacing">
       <ion-avatar *ngIf="user" class= "profile-shift">
@@ -22,8 +21,10 @@
       <!-- <ion-icon name="remove-circle" color="danger" style="font-size: 30px;"></ion-icon> -->
   </ion-row>
     <h4 *ngIf="user" no-margin text-center ion-text color = "white" style = "position: relative;">{{user.username}}</h4>
-    <p *ngIf="user && (user.stance)" text-center ion-text color = "white" no-margin style = "position: relative;"> Stance: {{user.stance}} </p>
-    <p *ngIf="user && (user.stance == '' || !user.stance)" text-center ion-text color = "white" no-margin style = "position: relative;"> Set stance! </p>
+    <p *ngIf="user && (user.stance)" text-center ion-text color = "white" (tap)= "changeStance()" no-margin style = "position: relative;"> Stance: {{user.stance}} </p>
+    <p *ngIf="user && (user.stance == '' || !user.stance)" text-center ion-text color = "white" (tap)= "changeStance()" no-margin style = "position: relative;"> Set stance! </p>
+
+
 <!-- User avatar and info - END -->
 
 <!-- Bunch of buttons - START -->
