--- a/skatehub/src/pages/filter/filter.html
+++ b/skatehub/src/pages/filter/filter.html
@@ -1,17 +1,6 @@
-<!--
-  Generated template for the FilterPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<!-- <ion-header>
-
-  <ion-navbar>
-    <ion-title text-wrap>Filter</ion-title>
-  </ion-navbar>
-
-</ion-header> -->
-
+<!-- Basic html to display check boxes that call the 'addToFilterArray' which
+  takes a string and boolean as parameters.
+ -->
 
 <ion-content>
   <ion-list no-padding>
@@ -23,12 +12,16 @@
           <ion-checkbox item-end [(ngModel)] = "stairs" (ionChange) = "addToFilterArray('stairs', stairs)"></ion-checkbox>
         </ion-item>
         <ion-item>
+          <ion-label>Ramps</ion-label>
+          <ion-checkbox item-end [(ngModel)] = "ramp" (ionChange) = "addToFilterArray('ramp', ramp)"></ion-checkbox>
+        </ion-item>
+        <ion-item>
           <ion-label>Rails</ion-label>
-          <ion-checkbox item-end [(ngModel)] = "rails" (ionChange) = "addToFilterArray('rails', rails)"></ion-checkbox>
+          <ion-checkbox item-end [(ngModel)] = "rail" (ionChange) = "addToFilterArray('rail', rail)"></ion-checkbox>
         </ion-item>
         <ion-item>
           <ion-label>Ledges</ion-label>
-          <ion-checkbox item-end [(ngModel)] = "ledges" (ionChange) = "addToFilterArray('ledges', ledges)"></ion-checkbox>
+          <ion-checkbox item-end [(ngModel)] = "ledge" (ionChange) = "addToFilterArray('ledge', ledge)"></ion-checkbox>
         </ion-item>
         <ion-item>
           <ion-label>Banks</ion-label>
@@ -38,10 +31,10 @@
           <ion-label>DIY</ion-label>
           <ion-checkbox item-end [(ngModel)] = "diy" (ionChange) = "addToFilterArray('diy', diy)"></ion-checkbox>
         </ion-item>
-        <ion-item>
+        <!-- <ion-item>
           <ion-label>Misc</ion-label>
           <ion-checkbox item-end [(ngModel)] = "misc" (ionChange) = "addToFilterArray('misc', misc)"></ion-checkbox>
-        </ion-item>
+        </ion-item> -->
         <!-- TODO
         <ion-item>
           <ion-label>Parks</ion-label>
