--- a/skatehub/src/pages/filter/filter.html
+++ b/skatehub/src/pages/filter/filter.html
@@ -15,7 +15,7 @@
 
 <ion-content>
   <ion-list no-padding>
-        <ion-item>
+        <ion-item id = "filter" >
           <ion-label>Filter</ion-label>
         </ion-item>
         <ion-item>
