--- a/skatehub/src/pages/login/login.html
+++ b/skatehub/src/pages/login/login.html
@@ -20,8 +20,11 @@
        <ion-icon style="font-size: 2.5em;" name="arrow-round-forward" color ="white"></ion-icon>
      </button>
    </div>
-   <ion-row style="margin-top: 35%; background-color: #222; opacity: .6; height: 35px;" justify-content-center>
-     <p no-padding style="color: #F5F5F5; font-weight: bold; margin-top: 5px;">Ready To Skate? <a [navPush] = "registerPage">Sign Up</a></p>
-   </ion-row>
+
    </form>
 </ion-content>
+<ion-footer style = " background-color: #222; opacity: .6;">
+<ion-row style="height: 35px;" justify-content-center>
+  <p no-padding style="color: #F5F5F5; font-weight: bold; margin-top: 9px;">Ready To Skate? <a [navPush] = "registerPage">Sign Up</a></p>
+</ion-row>
+</ion-footer>
