Made map to fill Div, added SKlogo at top right to make as button for navigating to active spots as well

--- a/skatehub/src/pages/login/login.html
+++ b/skatehub/src/pages/login/login.html
@@ -2,11 +2,11 @@
 <ion-content >
   <form (ngSubmit)="loginForm()">
     <ion-row style="margin-top: 45%;" justify-content-center>
-      <h1 style="color: #E0E0E0; font-weight: 900;">SkateHub</h1>
+      <h1 style="color: #FFFFFF; font-weight: 900;">SkateHub</h1>
     </ion-row>
     <ion-row justify-content-center padding>
      <ion-item padding no-lines>
-       <ion-input type = "text" placeholder="Username" [(ngModel)]="username" name="username"></ion-input>
+       <ion-input  type = "text" placeholder="Username" [(ngModel)]="username" name="username"></ion-input>
      </ion-item>
    </ion-row>
    <ion-row justify-content-center padding>
