--- a/skatehub/src/pages/navigate/navigate.html
+++ b/skatehub/src/pages/navigate/navigate.html
@@ -6,13 +6,13 @@
 -->
 <ion-header>
   <ion-navbar>
-    <ion-title>Map</ion-title>
+    <ion-title id = "maptitle">Map</ion-title>
+        <img id = "logo" src = "assets/imgs/SKlogo.png" height = "40;" end right>
   </ion-navbar>
 </ion-header>
 
 
-<ion-content padding>
-  <h3> My Google Maps Demo</h3>
+<ion-content no-padding>
   <div id="map"></div>
 
 </ion-content>
