--- a/skatehub/src/pages/profile/profile.html
+++ b/skatehub/src/pages/profile/profile.html
@@ -63,13 +63,25 @@
   <!-- <ion-row style="background-color: #505"> -->
     <!-- <ion-col col-6 style="background-color: #000"> Blah blah blah </ion-col> -->
   <!-- </ion-row> -->
-  <ion-row style="backround-color: #628" class="ion-row">
-    <ion-col col-6 style="background-color: #FF1493" (tap)= "mySpotsPage()" class="ion-col"> My Spots </ion-col>
-    <ion-col col-6 style="background-color: #FF1493" (tap)= "friendsPage()" class="ion-col"> Friends </ion-col>
+  <ion-row style="backround-color: #628" class="ion-top-row">
+    <ion-col col-6 style="background-color: #ffffff" (tap)= "mySpotsPage()" class="grid-border" class="ion-left-col"> My Spots
+      <p> </p>
+      <ion-icon name = "archive" class="icons"></ion-icon>
+    </ion-col>
+    <ion-col col-6 style="background-color: #ffffff" (tap)= "friendsPage()" class="grid-border"> Friends
+      <p> </p>
+      <ion-icon name = "ios-people" class="icons"></ion-icon>
+    </ion-col>
   </ion-row>
   <ion-row style="background-color#628" class="ion-row">
-    <ion-col col-6 style="background-color: #FF1493" (tap)= "invitesPage()" class="ion-col"> Invites </ion-col>
-    <ion-col col-6 style="background-color: #FF1493" (tap)= "settingsPage()" class="ion-col"> Settings </ion-col>
+    <ion-col col-6 style="background-color: #ffffff" (tap)= "invitesPage()" class="grid-border" class="ion-left-col"> Invites
+      <p> </p>
+      <ion-icon name = "paper-plane" class="icons"></ion-icon>
+    </ion-col>
+    <ion-col col-6 style="background-color: #ffffff" (tap)= "settingsPage()" class="grid-border"> Settings
+      <p> </p>
+      <ion-icon name = "settings" class="icons"></ion-icon>
+    </ion-col>
   </ion-row>
 </ion-grid>
 
