--- a/skatehub/src/pages/detailed-user/detailed-user.html
+++ b/skatehub/src/pages/detailed-user/detailed-user.html
@@ -1,5 +1,5 @@
 <!--
-This is sad and barren. 
+This is sad and barren.
 Should be changed to be colorful and nice.
 -->
 <ion-header>
@@ -9,10 +9,29 @@ Should be changed to be colorful and nice.
   <!-- https://www.youtube.com/watch?v=utLaZrrPLrk -->
   <ion-title>My name is Chef</ion-title>
   </ion-navbar>
-
 </ion-header>
+  <ion-content>
+    <!-- <ion-row justify-content-center class="top-spacing">
+        <ion-avatar *ngIf="user" class= "profile-shift">
+          <img [src]="imagePath" (tap)="show(imagePath)" style="border-radius: 50%; width: 100px; height: 100px; border: 10px solid #FF8F00;">
+        </ion-avatar>
+        <ion-icon ios="md-create" color="primary" *ngIf="imageChosen == 0" (tap)="chooseImage()" style="font-size: 25px;"></ion-icon>
+        <ion-icon name="remove-circle" color="danger" *ngIf="imageChosen == 1" (tap)="clear()" style="font-size: 30px;"></ion-icon>
+    </ion-row> -->
+  <!-- ^^^^ above comments are going to be necessary in the future maybe - DON'T DELETE :) -->
 
-
-<ion-content padding>
-  <h2 *ngIf="user">{{ user.username }}</h2>
-</ion-content>
+    <!-- Green background - START -->
+    <div class ="square-background">
+    </div>
+    <!-- Green background - END -->
+    <!-- User avatar and info - START -->
+    <ion-row justify-content-center class="top-spacing">
+        <ion-avatar *ngIf="user" class= "profile-shift">
+          <img [src]="user.avatar" class = "avatar-border">
+        </ion-avatar>
+        <!-- <ion-icon name="create" mode="android" ios="md-create" style="font-size: 25px; position: relative; color: #ffffff;"></ion-icon> -->
+        <!-- <ion-icon name="remove-circle" color="danger" style="font-size: 30px;"></ion-icon> -->
+    </ion-row>
+      <h4 *ngIf="user" no-margin text-center ion-text color = "white" style = "position: relative;">{{user.username}}</h4>
+      <p *ngIf="user && (user.stance)" text-center ion-text color = "white" (tap)= "changeStance()" no-margin style = "position: relative;"> Stance: {{user.stance}} </p>
+    </ion-content>
