--- a/skatehub/src/pages/detailed-user/detailed-user.html
+++ b/skatehub/src/pages/detailed-user/detailed-user.html
@@ -7,7 +7,7 @@ Should be changed to be colorful and nice.
   <ion-navbar>
   <!-- Needs to be changed. -->
   <!-- https://www.youtube.com/watch?v=utLaZrrPLrk -->
-  <ion-title>My name is Chef</ion-title>
+  <ion-title>My name is FreezyPop</ion-title>
   </ion-navbar>
 </ion-header>
   <ion-content>
