--- a/skatehub/src/pages/navigate/navigate.html
+++ b/skatehub/src/pages/navigate/navigate.html
@@ -1,11 +1,12 @@
 <ion-header>
   <ion-navbar>
     <ion-title id = "maptitle">Map</ion-title>
-        <img id = "logo" src = "assets/imgs/SKlogo.png" height = "40;" end right>
+        <img id = "logo" src = "assets/imgs/SKlogo.png"
+        (tap) = "openSeshPage()" height = "40;" end right>
   </ion-navbar>
 </ion-header>
 
 <!-- Don't need to say map twice -->
-<ion-content padding>  
+<ion-content no-padding>
   <div id="map"></div>
 </ion-content>
