--- a/skatehub/src/pages/my-spots/my-spots.html
+++ b/skatehub/src/pages/my-spots/my-spots.html
@@ -12,7 +12,10 @@
 
 </ion-header>
 
-
 <ion-content padding>
-
+<!-- full configured so that you can pull all the information for the spot. --> 
+<!-- Look at the homepage for inspiration.-->
+<ion-list>
+        <ion-item *ngFor="let spot of spotsArr">{{spot.username}}</ion-item>
+</ion-list>	
 </ion-content>
