--- a/skatehub/src/pages/thread/thread.html
+++ b/skatehub/src/pages/thread/thread.html
@@ -51,7 +51,7 @@
     </ion-buttons>
     <ion-buttons *ngIf="message.length > 0" end right id="pr-share-btn" (tap) = "sendMessage()">
       <button ion-button icon-only>
-        <ion-icon name="send"></ion-icon>
+        <ion-icon color="primary" name="send"></ion-icon>
       </button>
     </ion-buttons>
   </ion-toolbar>
