--- a/skatehub/src/pages/friends/friends.html
+++ b/skatehub/src/pages/friends/friends.html
@@ -6,7 +6,14 @@
 -->
 <ion-header>
   <ion-navbar>
-    <ion-title>Friends</ion-title>
+    <ion-title text-center position = "absolute">Friends</ion-title>
+    <ion-buttons end right (tap) = "openAddFriendsPage()">
+      <button clear id = "add" ion-button icon-only>
+        <ion-icon color="primary" name="person-add"></ion-icon>
+        <!-- <ion-icon color="primary" name="add"></ion-icon> -->
+      </button>
+    </ion-buttons>
+
     </ion-navbar>
 </ion-header>
 
