--- a/skatehub/src/pages/my-spots/my-spots.html
+++ b/skatehub/src/pages/my-spots/my-spots.html
@@ -6,9 +6,16 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>My Spots</ion-title>
-  </ion-navbar>
+<ion-toolbar no-border-top mode="md">
+  <ion-segment mode="md" ng-model="Categories" color="iosDarkBlue">
+    <ion-segment-button (tap)="loadPostedSpots()" value="postedSpots">
+      Posted Spots
+    </ion-segment-button>
+    <ion-segment-button (tap)="loadSavedSpots()" value="savedSpots">
+      Saved Spots
+    </ion-segment-button>
+  </ion-segment>
+</ion-toolbar>
 
 </ion-header>
 
