--- a/skatehub/src/pages/settings/settings.html
+++ b/skatehub/src/pages/settings/settings.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="white">
-    <ion-title ion-text color="primary">Settings</ion-title>
+    <ion-title ion-text color="iosBlue">Settings</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -34,7 +34,7 @@
       Profile Information
     </ion-list-header>
     <ion-item>
-      <ion-label floating color ="primary">Full Name</ion-label>
+      <ion-label floating color ="iosDarkBlue">Full Name</ion-label>
       <!-- [disabled] attribute will be set dynamically according
       to the fNReadOnly boolean var in the .ts file.
       Meaning, if the fNReadOnly = true, then the input field won't allow
@@ -54,7 +54,7 @@
       -->
         <ion-icon item-end *ngIf="!editName"
           (tap) ="toggleReadOnly('fullName', true); editName = true;"
-          name="create" mode="android" ios="md-create" color="primary"
+          name="create" mode="android" ios="md-create" color="iosBlue"
         class="edit-icon"></ion-icon>
 
 
@@ -77,26 +77,26 @@
 
     <!-- For each of the following fields, the same logic above is applied -->
    <ion-item>
-     <ion-label floating color ="primary">Username</ion-label>
+     <ion-label floating color ="iosBlue">Username</ion-label>
      <ion-input type="text"
      [(ngModel)]="username" name="username"
      [disabled] ="uNReadOnly" placeholder="username"></ion-input>
      <ion-icon *ngIf="!editUsername"
      item-end
      (tap) ="toggleReadOnly('username', true); editUsername = true;"
-     name="create" mode="android" ios="md-create" color="primary"
+     name="create" mode="android" ios="md-create" color="iosBlue"
      class="edit-icon"></ion-icon>
      <ion-badge *ngIf="editUsername" (tap)="toggleReadOnly('username', false); saveChanges('username'); editUsername = false;" item-end>Save</ion-badge>
    </ion-item>
    <ion-item>
-     <ion-label floating color ="primary">Email Address</ion-label>
+     <ion-label floating color ="iosBlue">Email Address</ion-label>
      <ion-input type="email"
      [(ngModel)]="email" name="email"
      [disabled] ="emailReadOnly" placeholder="email"></ion-input>
      <ion-icon *ngIf="!editEmail"
      item-end
      (tap) ="toggleReadOnly('email', true); editEmail = true;"
-     name="create" mode="android" ios="md-create" color="primary"
+     name="create" mode="android" ios="md-create" color="iosBlue"
      class="edit-icon"></ion-icon>
      <ion-badge *ngIf="editEmail" (tap)="toggleReadOnly('email', false); saveChanges('email'); editEmail = false;" item-end>Save</ion-badge>
    </ion-item>
@@ -107,7 +107,7 @@
    </ion-list-header>
     <ion-item>
       <ion-label>Allow Notifications</ion-label>
-      <ion-toggle checked="true"></ion-toggle>
+      <ion-toggle checked="true" color= "iosBlue"></ion-toggle>
     </ion-item>
 
     <ion-list-header padding-top>
