--- a/skatehub/src/pages/my-spots/my-spots.html
+++ b/skatehub/src/pages/my-spots/my-spots.html
@@ -7,22 +7,36 @@
 <ion-header>
 
 <ion-toolbar no-border-top mode="md">
-  <ion-segment mode="md" ng-model="Categories" color="iosDarkBlue">
-    <ion-segment-button (tap)="loadPostedSpots()" value="postedSpots">
+  <ion-segment mode="md" [(ngModel)]="mySpots" color="iosDarkBlue">
+    <ion-segment-button value="postedSpots">
       Posted Spots
     </ion-segment-button>
-    <ion-segment-button (tap)="loadSavedSpots()" value="savedSpots">
+    <ion-segment-button value="savedSpots">
       Saved Spots
     </ion-segment-button>
   </ion-segment>
 </ion-toolbar>
 
 </ion-header>
+<ion-content>
+  <div [ngSwitch]="mySpots">
+    <ion-list *ngSwitchCase="'postedSpots'">
+      <ion-item>
+        <h1>Posted Spots</h1>
+      </ion-item>
+    </ion-list>
 
-<ion-content padding>
-<!-- full configured so that you can pull all the information for the spot. --> 
-<!-- Look at the homepage for inspiration.-->
-<ion-list>
-        <ion-item *ngFor="let spot of spotsArr">{{spot.username}}</ion-item>
-</ion-list>	
+    <ion-list *ngSwitchCase="'savedSpots'">
+      <ion-item>
+        <h1>Saved Spots</h1>
+      </ion-item>
+    </ion-list>
+  </div>
 </ion-content>
+<!-- <ion-content padding> -->
+<!-- full configured so that you can pull all the information for the spot. -->
+<!-- Look at the homepage for inspiration. -->
+<!-- <ion-list> -->
+        <!-- <ion-item *ngFor="let spot of spotsArr">{{spot.username}}</ion-item> -->
+<!-- </ion-list> -->
+<!-- </ion-content> -->
