--- a/skatehub/src/pages/detailed-user/detailed-user.html
+++ b/skatehub/src/pages/detailed-user/detailed-user.html
@@ -37,7 +37,10 @@ Should be changed to be colorful and nice.
       <!-- Add friend and Invite user button -->
       <!-- <ion-badge item-end (tap)="addFriend()"  class="addFriend">Add Friend :o</ion-badge> -->
       <!-- <ion-badge item-end (tap)="sendInvite()" class="sendInvite">Send invite </ion-badge> -->
-      <ion-badge item-end (tap)= "addFriend()" class="addFriendClass"> <ion-icon name = "person-add" class ="badgeIcons"> </ion-icon> </ion-badge>
+      <ion-badge *ngIf="!hasRequested" item-end (tap)= "addFriend()" class="addFriendClass"> <ion-icon name = "person-add" class ="badgeIcons"> </ion-icon> </ion-badge>
+      <ion-badge *ngIf="hasRequested" item-end class="addFriendClass"> <ion-icon name = "clock" class ="badgeIcons"> </ion-icon> </ion-badge>
+
+
       <ion-badge item-end (tap)= "sendInvite()" class="sendInviteClass"> <ion-icon name = "paper-plane" class="badgeIcons"> </ion-icon> </ion-badge>
       <ion-badge item-end (tap)= "sendMessage()" class="sendMessageClass"> <ion-icon id = "bubbles" name="ios-chatbubbles" class="badgeIcons"> </ion-icon> </ion-badge>
       <!-- End friend/user button -->
