Reclosing #35 viewing other user spots

--- a/skatehub/src/pages/detailed-user/detailed-user.html
+++ b/skatehub/src/pages/detailed-user/detailed-user.html
@@ -47,7 +47,7 @@ Should be changed to be colorful and nice.
 
       <ion-grid style="background-color: #FFF" class="ion-grid">
         <ion-row style="backround-color: #628" class="ion-top-row">
-          <ion-col *ngIf="user" col-6 style="background-color: #ffffff" (tap)= "mySpotsPage()" class="grid-border" class="ion-left-col"> Spots
+          <ion-col *ngIf="user" col-6 style="background-color: #ffffff" (tap)= "spotsPage()" class="grid-border" class="ion-left-col"> Spots
             <p> </p>
             <ion-icon name = "archive" class="icons"></ion-icon>
           </ion-col>
