--- a/skatehub/src/pages/home/home.html
+++ b/skatehub/src/pages/home/home.html
@@ -57,7 +57,11 @@
               <!-- style="border-radius: 50%; width: 50px; height: 50px;" -->
              </ion-avatar>
             <h3><strong>{{spot.username}}</strong></h3>
-            <ion-icon name = "more" item-end (tap) = "openDetailedAction(spot)"></ion-icon>
+            <ion-buttons item-end (tap) = "openDetailedAction(spot)">
+              <button ion-button clear icon-only>
+                <ion-icon name="more" color="black"></ion-icon>
+              </button>
+            </ion-buttons>
           </ion-item>
         </ion-col>
       </ion-row>
