Finished Icon and MISC icon using illustrator and photoshop

--- a/skatehub/src/pages/detailed-user/detailed-user.html
+++ b/skatehub/src/pages/detailed-user/detailed-user.html
@@ -38,8 +38,8 @@ Should be changed to be colorful and nice.
       <!-- <ion-badge item-end (tap)="addFriend()"  class="addFriend">Add Friend :o</ion-badge> -->
       <!-- <ion-badge item-end (tap)="sendInvite()" class="sendInvite">Send invite </ion-badge> -->
       <ion-badge item-end (tap)= "addFriend()" class="addFriendClass"> <ion-icon name = "person-add" class ="badgeIcons"> </ion-icon> </ion-badge>
-      <ion-badge item-end (tap)= "sendInvite()" class="sendInviteClass"> <ion-icon name = "paper-plane" class="badgeIcons"> </ion-icon> </ion-badge>
-      <ion-badge item-end (tap)= "sendMessage()" class="sendMessageClass"> <ion-icon id = "bubbles" name="ios-chatbubbles" class="badgeIcons"> </ion-icon> </ion-badge>
+      <ion-badge item-end (tap)= "sendInvite()" class="sendMessageClass"> <ion-icon name = "paper-plane" class="badgeIcons"> </ion-icon> </ion-badge>
+      <!-- <ion-badge item-end (tap)= "sendMessage()" class="sendMessageClass"> <ion-icon id = "bubbles" name="ios-chatbubbles" class="badgeIcons"> </ion-icon> </ion-badge> -->
       <!-- End friend/user button -->
 
       <ion-grid style="background-color: #FFF" class="ion-grid">
