--- a/skatehub/src/pages/add-friend/add-friend.html
+++ b/skatehub/src/pages/add-friend/add-friend.html
@@ -22,11 +22,11 @@
       [(ngModel)] = "searchTerm" name = "searchTerm" (ionChange) = "filter(true)"></ion-textarea>
   </ion-item>
 
-  <ion-list *ngIf="selectedUsers.length > 0">
+  <ion-list *ngIf="userResultArr.length > 0">
     <ion-list-header>
-      Recipients
+      Search Results
     </ion-list-header>
-    <ion-item *ngFor="let searchUser of selectedUsers">
+    <ion-item *ngFor="let searchUser of userResultArr" (tap)="toggleUser(searchUser)">
       <ion-avatar item-start>
         <img [src]="searchUser.avatar">
       </ion-avatar>
@@ -35,9 +35,12 @@
       <ion-icon *ngIf="searchUser.checked" name="checkmark" item-end></ion-icon>
     </ion-item>
   </ion-list>
-
-  <ion-list>
-    <ion-item *ngFor="let searchUser of userResultArr" (tap)="toggleUser(searchUser)">
+  
+  <ion-list *ngIf="selectedUsers.length > 0">
+    <ion-list-header>
+      Recipients
+    </ion-list-header>
+    <ion-item *ngFor="let searchUser of selectedUsers">
       <ion-avatar item-start>
         <img [src]="searchUser.avatar">
       </ion-avatar>
