--- a/skatehub/src/pages/my-spots/my-spots.html
+++ b/skatehub/src/pages/my-spots/my-spots.html
@@ -19,20 +19,39 @@
 
 </ion-header>
 
-<ion-content padding>
+<ion-content>
 <!-- full configured so that you can pull all the information for the spot. -->
 <!-- Look at the homepage for inspiration.-->
-<ion-list>
-
-</ion-list>
 
 <div [ngSwitch]="categories">
     <ion-list *ngSwitchCase="'postedSpots'">
-      <ion-item *ngFor="let spot of spotsArr">{{spot.name}}</ion-item>
+      <ion-item *ngFor="let spot of spotsArr">
+        <ion-thumbnail item-start>
+          <img [src]="spot.images[0]">
+          </ion-thumbnail>
+          <h2 text-wrap>{{spot.name}}</h2>
+          <ion-buttons item-end (tap) = "openDetailedSpot(spot)">
+            <button ion-button clear icon-only>
+              View
+            </button>
+          </ion-buttons>
+      </ion-item>
     </ion-list>
 
     <ion-list *ngSwitchCase="'savedSpots'">
-      <ion-item *ngFor="let spot of savedSpotsArr">{{spot.name}}</ion-item>
+      <ion-item *ngFor="let spot of savedSpotsArr">
+        <ion-item *ngFor="let spot of spotsArr">
+          <ion-thumbnail item-start>
+            <img [src]="spot.images[0]">
+            </ion-thumbnail>
+            <h2 text-wrap>{{spot.name}}</h2>
+            <ion-buttons item-end (tap) = "openDetailedSpot(spot)">
+              <button ion-button clear icon-only>
+                View
+              </button>
+            </ion-buttons>
+        </ion-item>
+      </ion-item>
     </ion-list>
   </div>
 </ion-content>
