Saving comments and reporting spots (#101)
* saving comments

* comments looking sexy

* formatting good god

* formatting again

* Report (#102)

* reports are looking spiff

* formatting

--- a/skatehub/src/pages/detailed-spot/detailed-spot.html
+++ b/skatehub/src/pages/detailed-spot/detailed-spot.html
@@ -89,7 +89,7 @@
 
     <ion-item>
       <ion-label floating>Review</ion-label>
-      <ion-input [(ngModel)]="description" type="text"></ion-input>
+      <ion-input [(ngModel)]="comment" type="text"></ion-input>
     </ion-item>
 
 	<!--  (click)="saveButton(saturation); saturation=0; description =''" -->
